[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "langraph-youtube"
version = "0.1.0"
description = "A starter Python project"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "ipython>=8.18.1",
    "langchain>=0.3.30",
    "langchain-google-genai>=2.1.12",
    "langchain-openai>=0.3.35",
    "langgraph>=0.6.11",
    "notebook>=7.5.7",
    "python-dotenv>=1.2.1",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
hello = "langraph_youtube.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
